# peakspline

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: Instrument_spectral_response_function_fitting.ipynb
peakspline/: __init__.py  gauss.py  peakspline.py
tests/: peakfitspline_test.py
