[project]
name = "peakspline"
version = "0.1.dev0"
dependencies = [
        "numpy",
        "scipy",
]
description="Spline fitting of peak response functions"
authors = [
    { name = "Andreas Baumgartner", email = "andreas.baumgartner@dlr.de" },
]
maintainers = [
    { name = "Andreas Baumgartner", email = "andreas.baumgartner@dlr.de" },
]
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta"
]

[project.urls]
repository = "https://gitlab.dlr.de/baum_ad/p4001-spline"

[build-system]
requires = [
    "toml",
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests",]
